[tool.poetry]
name = "prob5"
version = "0.1.0"
description = ""
authors = ["Sanggyu Lee <8325289+gyusang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
scipy = "^1.9.0"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
seaborn = "^0.11.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
